Drops per cluster metrics from allocation request stat endpoint (#748)
